# be-project-rust

./: Cargo.toml  diesel.toml  schema.sql
migrations/2024-08-11-034708_create_users/: up.sql
migrations/2024-08-12-061211_create_company/: down.sql  up.sql
migrations/2024-08-12-061225_create_position/: down.sql  up.sql
migrations/2024-08-12-061229_create_company_position/: down.sql  up.sql
migrations/2024-08-12-061248_create_posts/: down.sql  up.sql
migrations/2024-08-12-061257_follows/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  response.rs  schema.rs
src/routes/: init.rs  mod.rs
src/routes/v1/: company.rs  follow.rs  init.rs  mod.rs  position.rs  post.rs  user.rs
