[package]
name = "skripsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
listenfd = "1.0.1"
paris = { version = "1.5.15", features = ["macros"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
